--- a/index.html
+++ b/index.html
@@ -46,6 +46,25 @@
       text-shadow: 2px 2px 4px #000;
     }
 
+    .video-wrapper {
+      position: relative;
+      width: 100%;
+      max-width: 560px;
+      padding-bottom: 56.25%; /* 16:9 ratio */
+      height: 0;
+      overflow: hidden;
+      margin: 2rem auto;
+    }
+
+    .video-wrapper iframe {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+
     footer {
       font-size: 0.7rem;
       color: rgba(255, 255, 255, 0.6);
@@ -69,6 +88,12 @@
 
   <main>
     <h1>“Sinta o sabor da tradição com a suavidade que conquista.”</h1>
+
+    <div class="video-wrapper">
+      <iframe src="https://www.youtube.com/embed/uwZ0nxjbAD8"
+              allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen></iframe>
+    </div>
   </main>
 
   <footer>
