--- a/index.html
+++ b/index.html
@@ -65,6 +65,26 @@
       border: none;
     }
 
+    /* 🔸 Botão chamativo */
+    .btn-compra {
+      background-color: #f4c07a;
+      color: #2c1a0f;
+      text-decoration: none;
+      padding: 1rem 2rem;
+      border-radius: 30px;
+      font-weight: bold;
+      font-size: 1.2rem;
+      margin-top: 1.5rem;
+      transition: all 0.3s ease;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+    }
+
+    .btn-compra:hover {
+      background-color: #ffdb9b;
+      transform: scale(1.05);
+      box-shadow: 0 6px 14px rgba(0,0,0,0.4);
+    }
+
     footer {
       font-size: 0.7rem;
       color: rgba(255, 255, 255, 0.6);
@@ -77,6 +97,10 @@
       }
       img.logo {
         max-width: 220px;
+      }
+      .btn-compra {
+        font-size: 1rem;
+        padding: 0.8rem 1.5rem;
       }
     }
   </style>
@@ -94,6 +118,13 @@
               allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen></iframe>
     </div>
+
+    <!-- 🔗 Botão de compra -->
+    <a href="https://loja.infinitepay.io/cens1000/pdd2860-cachaca---arte-suave" 
+       target="_blank" 
+       class="btn-compra">
+       🥃 Adquira já sua Arte Suave
+    </a>
   </main>
 
   <footer>
